# wrinch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
crates/rinch/: Cargo.toml
crates/rinch-core/: Cargo.toml
crates/rinch-core/src/: element.rs  event.rs  events.rs  hooks.rs  lib.rs  reactive.rs
crates/rinch-macros/: Cargo.toml
crates/rinch-macros/src/: lib.rs  prop_schema.rs  suggestions.rs
crates/rinch-renderer/: Cargo.toml
crates/rinch-renderer/src/: backend.rs  lib.rs  paint.rs
crates/rinch/src/: app.rs  clipboard.rs  dialogs.rs  lib.rs  tray.rs  window.rs
crates/rinch/src/menu/: mod.rs
crates/rinch/src/shell/: devtools.rs  devtools_overlay.rs  hot_reload.rs  mod.rs  runtime.rs  window_manager.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: rinch-core.md  rinch-macros.md  rinch.md
docs/src/architecture/: overview.md  reactive-system.md  rendering-pipeline.md
docs/src/guide/: effects.md  getting-started.md  memos.md  menus.md  platform.md  reactivity.md  rsx-syntax.md  signals.md  windows.md
examples/smyeditor/: Cargo.toml
examples/smyeditor/src/: main.rs
scripts/: setup-hooks.sh
scripts/hooks/: pre-commit
