[package]
name = "rinch-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for rinch - RSX syntax"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
